Added integration tests for controllers